# LocalShare

./: .gitignore  README.md  index.html  localshare.py  pyproject.toml
